Top10_views_Output_with_Commands.txt
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ ls
inputdata   T5Cat.jar            Top10_ratings.java       Top10_ratings$Reduce.class  Top5_categories.class  Top5_categories$Map.class
T10rat.jar  Top10_ratings.class  Top10_ratings$Map.class  Top10_views.java            Top5_categories.java   Top5_categories$Reduce.class
iitp@iitp-virtual-machine:~/Youtube$ rm -r Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ export HADOOP_CLASSPATH=/usr/lib/jvm/java-1.8.0-openjdk-amd64/lib/tools.jar
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/Youtube/Top10_views.java
javac: file not found: /home/Youtube/Top10_views.java
Usage: javac <options> <source files>
use -help for a list of possible options
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ export HADOOP_CLASSPATH=/usr/lib/jvm/java-1.8.0-openjdk-amd64/lib/tools.jar
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_views.java
/home/iitp/Youtube/Top10_views.java:26: error: cannot find symbol
                int f=Integer.parseFloat(str[5]);
                             ^
  symbol:   method parseFloat(String)
  location: class Integer
Note: /home/iitp/Youtube/Top10_views.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_views.java
/home/iitp/Youtube/Top10_views.java:26: error: cannot find symbol
                int f=Integer.parseint(str[5]);
                             ^
  symbol:   method parseint(String)
  location: class Integer
Note: /home/iitp/Youtube/Top10_views.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_views.java
/home/iitp/Youtube/Top10_views.java:26: error: cannot find symbol
                int f=integer.parseint(str[5]);
                      ^
  symbol:   variable integer
  location: class Map
Note: /home/iitp/Youtube/Top10_views.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ rm -r Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_views.java
/home/iitp/Youtube/Top10_views.java:49: error: incompatible types: possible lossy conversion from float to int
           context.write(key, new IntWritable(sum));
                                              ^
Note: /home/iitp/Youtube/Top10_views.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ nano Top10_views.java
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop com.sun.tools.javac.Main /home/iitp/Youtube/Top10_views.java
Note: /home/iitp/Youtube/Top10_views.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ cd /home/iitp/Youtube
iitp@iitp-virtual-machine:~/Youtube$ jar cf T10view.jar Top10_views*.class
iitp@iitp-virtual-machine:~/Youtube$ cd /home/iitp/hadoop-2.6.0/bin
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop jar /home/iitp/Youtube/T10view.jar Top10_views /Youtube/inputdata/ /Youtube/outputdata2
20/10/10 10:26:07 INFO client.RMProxy: Connecting to ResourceManager at /0.0.0.0:8032
20/10/10 10:26:07 WARN mapreduce.JobSubmitter: Hadoop command-line option parsing not performed. Implement the Tool interface and execute your application with ToolRunner to remedy this.
20/10/10 10:26:07 INFO input.FileInputFormat: Total input paths to process : 1
20/10/10 10:26:07 INFO mapreduce.JobSubmitter: number of splits:1
20/10/10 10:26:08 INFO mapreduce.JobSubmitter: Submitting tokens for job: job_1602133726714_0008
20/10/10 10:26:08 INFO impl.YarnClientImpl: Submitted application application_1602133726714_0008
20/10/10 10:26:08 INFO mapreduce.Job: The url to track the job: http://iitp-virtual-machine:8088/proxy/application_1602133726714_0008/
20/10/10 10:26:08 INFO mapreduce.Job: Running job: job_1602133726714_0008
20/10/10 10:26:14 INFO mapreduce.Job: Job job_1602133726714_0008 running in uber mode : false
20/10/10 10:26:14 INFO mapreduce.Job:  map 0% reduce 0%
20/10/10 10:26:20 INFO mapreduce.Job:  map 100% reduce 0%
20/10/10 10:26:25 INFO mapreduce.Job:  map 100% reduce 100%
20/10/10 10:26:26 INFO mapreduce.Job: Job job_1602133726714_0008 completed successfully
20/10/10 10:26:26 INFO mapreduce.Job: Counters: 49
        File System Counters
                FILE: Number of bytes read=73806
                FILE: Number of bytes written=359511
                FILE: Number of read operations=0
                FILE: Number of large read operations=0
                FILE: Number of write operations=0
                HDFS: Number of bytes read=965409
                HDFS: Number of bytes written=69531
                HDFS: Number of read operations=6
                HDFS: Number of large read operations=0
                HDFS: Number of write operations=2
        Job Counters
                Launched map tasks=1
                Launched reduce tasks=1
                Data-local map tasks=1
                Total time spent by all maps in occupied slots (ms)=3208
                Total time spent by all reduces in occupied slots (ms)=3242
                Total time spent by all map tasks (ms)=3208
                Total time spent by all reduce tasks (ms)=3242
                Total vcore-seconds taken by all map tasks=3208
                Total vcore-seconds taken by all reduce tasks=3242
                Total megabyte-seconds taken by all map tasks=3284992
                Total megabyte-seconds taken by all reduce tasks=3319808
        Map-Reduce Framework
                Map input records=4100
                Map output records=4100
                Map output bytes=65600
                Map output materialized bytes=73806
                Input split bytes=120
                Combine input records=0
                Combine output records=0
                Reduce input groups=4066
                Reduce shuffle bytes=73806
                Reduce input records=4100
                Reduce output records=4066
                Spilled Records=8200
                Shuffled Maps =1
                Failed Shuffles=0
                Merged Map outputs=1
                GC time elapsed (ms)=85
                CPU time spent (ms)=1030
                Physical memory (bytes) snapshot=324149248
                Virtual memory (bytes) snapshot=3761971200
                Total committed heap usage (bytes)=222429184
        Shuffle Errors
                BAD_ID=0
                CONNECTION=0
                IO_ERROR=0
                WRONG_LENGTH=0
                WRONG_MAP=0
                WRONG_REDUCE=0
        File Input Format Counters
                Bytes Read=965289
        File Output Format Counters
                Bytes Written=69531
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$ ./hadoop fs -cat /Youtube/outputdata2/part-r-00000 | sort -n -k2 -r | head -n10
12Z3J1uzd0Q     65341925
4DC4Rb9quKk     33754615
LU8DDYz68kM     27721690
kHmvkRoEowc     18235463
Md6rURKhZmA     18141492
EwTZ2xpQwpA     16841569
A2f3cuUXXRs     13038204
rZBA0SKmQy8     11007201
irp8CNj9qBI     10172172
ZCYaw5tGYAs     8944331
iitp@iitp-virtual-machine:~/hadoop-2.6.0/bin$